# OpenGames

./: settings.gradle
opengames/src/main/jni/ecwolf-1.3.2-src/: .hg_archival.txt  .hgignore  .hgtags  Android.mk  CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/TinyXML/: CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/TouchControls/: Button.cpp  Button.h  CMakeLists.txt  ControlSuper.h  GLLines.cpp  GLLines.h  GLRect.h  JNITouchControlsUtils.cpp  JNITouchControlsUtils.h  License.txt  Mouse.cpp  MultitouchMouse.cpp  OpenGLUtils.cpp  OpenGLUtils.h  TouchControls.cpp  TouchControls.h  TouchControlsConfig.h  TouchControlsContainer.cpp  TouchControlsContainer.h  TouchJoy.cpp  WheelSelect.cpp  WheelSelect.h
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/launcher/: AndroidManifest.xml  CMakeLists.txt  License.txt
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/launcher/res/drawable/: layout_sel_background.xml
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/launcher/res/layout/: fragment_launch.xml  fragment_options.xml  games_listview_item.xml  touch_controls_settings.xml
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/launcher/res/raw/: about.txt  changes.txt  intro.txt
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/launcher/res/values/: strings.xml
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/launcher/src/: CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/libpng/: CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/sigc++/: CMakeLists.txt  ChangeLog  config.h.in
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/sigc++/sigc++/: class_slot.h  hide.h  limit_reference.h  method_slot.h  retype.h  signal.h  slot.h
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/sigc++/sigc++/adaptors/: adaptor_trait.h  bind.h  bind_return.h  compose.h  deduce_result_type.h  exception_catch.h  hide.h  retype.h  retype_return.h  track_obj.h
opengames/src/main/jni/ecwolf-1.3.2-src/android-libs/sigc++/sigc++/functors/: functor_trait.h  mem_fun.h  ptr_fun.h  (+1 more)
opengames/src/main/jni/ecwolf-1.3.2-src/bzip2/: Android.mk  bzlib.h
opengames/src/main/jni/ecwolf-1.3.2-src/docs/: Changes.txt  README-dc.txt  README.txt  SDEReadme.txt  ec_changelog.txt
opengames/src/main/jni/ecwolf-1.3.2-src/gdtoa/: Android.mk  CMakeLists.txt  gdtoa.h  gdtoaimp.h
opengames/src/main/jni/ecwolf-1.3.2-src/lzma/: Android.mk  CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/lzma/C/: CpuArch.c
opengames/src/main/jni/ecwolf-1.3.2-src/src/: Android.mk  CMakeLists.txt  actor.cpp  actor.h  actordef.h  am_map.cpp  am_map.h  c_cvars.cpp  c_cvars.h  colormatcher.cpp  colormatcher.h  config.cpp  config.h  dobject.cpp  dobject.h  dobjgc.cpp  farchive.cpp  farchive.h  files.cpp  files.h  filesys.cpp  filesys.h  filesys_steam.cpp  g_conversation.cpp  g_conversation.h  g_intermission.cpp  g_intermission.h  g_mapinfo.cpp  g_mapinfo.h  gamemap.cpp  gamemap.h  gamemap_planes.cpp  gamemap_uwmf.cpp  id_ca.cpp  id_ca.h  id_in.cpp  id_in.h  id_sd.cpp  id_sd.h  id_us.h  (+86 more)
opengames/src/main/jni/ecwolf-1.3.2-src/src/android/: android-jni.cpp  in_android.cpp  in_android.h  port_act_defs.h
opengames/src/main/jni/ecwolf-1.3.2-src/src/android/extra_files/: svnrevision.h
opengames/src/main/jni/ecwolf-1.3.2-src/src/dosbox/: dbopl.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/src/g_shared/: a_deathcam.cpp  a_inventory.cpp  a_inventory.h  a_keys.cpp  a_playerpawn.cpp  a_playerpawn.h  a_randomspawner.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/src/g_wolf/: wolf_sbar.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/src/macosx/: icon.icns  install.txt  wl_iwad_picker_cocoa.mm
opengames/src/main/jni/ecwolf-1.3.2-src/src/mame/: fmopl.cpp  fmopl.h
opengames/src/main/jni/ecwolf-1.3.2-src/src/r_2d/: r_draw.cpp  r_draw.h  r_drawt.cpp  r_main.cpp  r_main.h  r_things.cpp  r_things.h
opengames/src/main/jni/ecwolf-1.3.2-src/src/r_data/: colormaps.cpp  colormaps.h  r_translate.cpp  r_translate.h  renderstyle.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/src/resourcefiles/: ancientzip.h  file_7z.cpp  file_audiot.cpp  file_directory.cpp  file_gamemaps.cpp  file_grp.cpp  file_lump.cpp  file_macbin.cpp  file_pak.cpp  file_rff.cpp  file_vgagraph.cpp  file_vswap.cpp  file_wad.cpp  file_zip.cpp  resourcefile.cpp  resourcefile.h  wolfmapcommon.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/src/textures/: anim_switches.cpp  animations.cpp  automaptexture.cpp  bitmap.cpp  bitmap.h  canvastexture.cpp  ddstexture.cpp  emptytexture.cpp  flattexture.cpp  imgztexture.cpp  jpegtexture.cpp  multipatchtexture.cpp  patchtexture.cpp  pcxtexture.cpp  pngtexture.cpp  rawpagetexture.cpp  solidtexture.cpp  texture.cpp  texturemanager.cpp  textures.h  tgatexture.cpp  warptexture.cpp  wolfrawtexture.cpp  wolfshapetexture.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/src/thingdef/: thingdef.cpp  thingdef.h  thingdef_codeptr.cpp  thingdef_properties.cpp  thingdef_type.h
opengames/src/main/jni/ecwolf-1.3.2-src/src/win32/: i_crash.cpp  i_main.cpp  resource.h  windows.rc  wl_iwad_win32.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/textscreen/: CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/tools/patchutil/: CMakeLists.txt  bsdiff.c  bspatch.c  main.cpp  patchdata.cpp  patchdata_sd3.cpp
opengames/src/main/jni/ecwolf-1.3.2-src/tools/updaterevision/: CMakeLists.txt  updaterevision.c
opengames/src/main/jni/ecwolf-1.3.2-src/wadsrc/: CMakeLists.txt
opengames/src/main/jni/ecwolf-1.3.2-src/wadsrc/static/: decorate.txt  fontdefs.txt  iwadinfo.txt  language.enu  language.spa  lockdefs.txt  n3dmap.txt  sndinfo.txt  sndseq.txt  textcolors.txt
opengames/src/main/jni/ecwolf-1.3.2-src/wadsrc/static/actors/: native.txt
opengames/src/main/jni/ecwolf-1.3.2-src/wadsrc/static/mapinfo/: challenge.txt  danger.txt  noah.txt  spear.txt  wolf3d.txt  wolfcommon.txt
opengames/src/main/jni/ecwolf-1.3.2-src/wadsrc/static/xlat/: challenge.txt  danger.txt  noah.txt  rott.txt  spear.txt  wolf3d.txt
opengames/src/main/jni/ecwolf-1.3.2-src/zlib/: CMakeLists.txt
(+2155 files in other folders)
